--- a/Style.css
+++ b/Style.css
@@ -577,6 +577,10 @@ footer {
     }
     
     .home-text h1{
-        Font-size: 1.5rem;
+        Font-size: 2rem;
+    }
+
+    .home-text p{
+        Font-size: 1rem;
     }
 }
