--- a/Style.css
+++ b/Style.css
@@ -593,4 +593,9 @@ footer {
     .home-text p{
         Font-size: 1rem;
     }
+    .video{
+        width: 380px;
+        max-height: 100%;
+        padding: 5px;
+    }
 }
